--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<kafka.version>0.8.2.0</kafka.version>
 		<junit.version>4.12</junit.version>
 		<commons.version>1.3.2</commons.version>
+		<compiler.plugin.version>3.5.1</compiler.plugin.version>
 	</properties>
 
 	<dependencies>
@@ -35,6 +36,18 @@
 			<artifactId>commons-io</artifactId>
 			<version>${commons.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.hbase</groupId>
+			<artifactId>hbase-server</artifactId>
+			<version>0.98.8-hadoop2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hbase</groupId>
+			<artifactId>hbase-testing-util</artifactId>
+			<version>0.98.8-hadoop2</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -48,14 +61,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${compiler.plugin.version}</version>
 				<configuration>
 					<verbose>true</verbose>
 					<fork>true</fork>
-					<executable><!-- path-to-javac -->
+					<executable>${JAVA_HOME}/bin/javac
 					</executable>
-					<compilerVersion>1.3</compilerVersion>
-					<source>1.8</source>
-					<target>1.8</target>
+					<compilerVersion>1.8</compilerVersion>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 		</plugins>
